@@ -3,6 +3,7 @@ Flare v1.13 (WIP)
 Engine features:
 
 * Added additional requirement properties to enemy and NPC map objects. The properties now match what is available for map events.
+* When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
 
 Engine fixes:
 
